# todors

./: .envrc  .gitignore  .tasks  Cargo.toml  README.md  justfile  rustfmt.toml  todo.toml
benches/: bench.rs
src/: .exrc  actions.rs  app.rs  args.rs  clap_cli.rs  cli.rs  color.rs  config.rs  errors.rs  file.rs  lib.rs  logger.rs  main.rs  prelude.rs  style.rs  task.rs  todo.toml  util.rs
src/actions/: add.rs  delete.rs  list.rs  mod.rs
tests/: done.txt  integration.rs  todo.cfg  todo.txt
