[package]
name = "todors"
version = "0.0.1"
authors = ["Nick Murphy <comfortablynick@gmail.com>"]
description = "Command line interface using the todo.txt format"
edition = "2018"
publish = false
autobins = false

[lib]
doctest = false

[[bin]]
name = "todors"
path = "src/bin/main.rs"

[dependencies]
log = "0.4.11"
env_logger = "0.8.1"
chrono = "0.4"
dirs = "2.0"
regex = "1"
termcolor = "1.1"
todo-txt = "^1.3"
toml = "0.5"
shellexpand = "2"
clap = "3.0.0-beta.1"
anyhow = "1.0"

# dev dependencies
# left in dependencies so we can see them in `cargo doc`
pretty_assertions = "0.6"
duct = "0.13.4"
criterion = "0.3"

[dependencies.serde]
version = "1.0.114"
features = ["derive"]

[[bench]]
name = "bench"
harness = false
