[package]
name        = "todors"
version     = "0.0.2"
authors     = ["Nick Murphy <comfortablynick@gmail.com>"]
description = "Command line interface using the todo.txt format"
edition     = "2021"
publish     = false
autobins    = false

[lib]
doctest = false

[[bin]]
name = "todors"
path = "src/bin/main.rs"

[dependencies]
log         = "0.4.11"
env_logger  = "0.7.1"
chrono      = "0.4"
dirs        = "2.0"
regex       = "1"
termcolor   = "1.1"
todo-txt    = "^1.3"
toml        = "0.5"
shellexpand = "2"
anyhow      = "1.0"

[dependencies.clap]
version  = "3.1.6"
features = ["derive", "env"]

[dependencies.serde]
version  = "1.0.114"
features = ["derive"]

[dev-dependencies]
pretty_assertions = "0.6"
duct              = "0.13.4"
criterion         = "0.3"

[[bench]]
name    = "bench"
harness = false
