[package]
name        = "todors"
version     = "0.0.2"
authors     = ["Nick Murphy <comfortablynick@gmail.com>"]
description = "Command line interface using the todo.txt format"
edition     = "2021"
publish     = false
autobins    = false

[lib]
doctest = false

[[bin]]
name = "todors"
path = "src/bin/main.rs"

[dependencies]
log           = "0.4.16"
env_logger    = "0.9.0"
chrono        = "0.4.19"
dirs          = "4.0.0"
regex         = "1.5.5"
termcolor     = "1.1.3"
todo-txt      = "2.2.0"
toml          = "0.5.8"
shellexpand   = "2.1.0"
anyhow        = "1.0.56"
clap_complete = "3.1.1"

[dependencies.clap]
version = "3.1.8"
features = ["derive", "env"]

[dependencies.serde]
version = "1.0.136"
features = ["derive"]

[dev-dependencies]
pretty_assertions = "1.2.1"
duct              = "0.13.5"
criterion         = "0.3.5"

[[bench]]
name    = "bench"
harness = false
